[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langsmith>=0.7.17",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
]
